# easy_example_1

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: config.yaml
config/dataset/: base.yaml
config/model/: base.yaml
config/training/loss/: base.yaml
config/training/optimizer/: base.yaml
config/training/trainer/: base.yaml
data/raw/: .gitignore
notebooks/experiment/: main.ipynb
src/easy_example_1/model/: __init__.py
src/easy_example_1/training/: LRScheduler.py
tests/: run_test.py
tests/unit/utils/: test_UtilityManager.py
