[project]
name = "easy_example_1"
version = "0.1.0"
description = ""
authors = [
    {name = "ddm9490",email = "ddm9490@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)"
]

[tool.poetry]
package-mode = true

packages = [
    { include = "easy_example_1", from = "src" }
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.7"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
pytest-rich = "^0.2.0"
pre-commit = "^4.5.0"
types-pyyaml = "^6.0.12.20250915"
mypy = "^1.19.0"
jupyter = "^1.1.1"
lxml = "^6.0.2"
rich = "^14.2.0"

[tool.pytest.ini_options]
addopts = "--rich --cov=. --cov-report=html:reports/coverage"
testpaths = ["tests"]
pythonpath = "."

[tool.coverage.run]
# It will be saved as 'reports/coverage/.coverage' relative to the project root.
data_file = "reports/coverage/.coverage"
# Specifies the source files for which code coverage will be measured.
source = ["."]

[tool.ruff]
line-length = 100
lint.ignore = ["F401"]

[tool.mypy]
files = ["src/", "tests/"]
strict = true
plugins = ["pydantic.mypy"]
html_report = "reports/mypy/"
txt_report = "reports/mypy"
verbosity = 0
pretty = true
show_error_codes = true
show_column_numbers = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"




